--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,4 @@
 @charset "utf-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding');
