--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,3 +8,4 @@
 @import "minimal-mistakes"; // main partials
 
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding'); // font 추가
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
