--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -27,7 +27,7 @@
   {% endfor %}
 {% endif %}
 
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
 <script>
   new Vue({
@@ -46,4 +46,4 @@
     }
   });
 
-</script>
+</script> -->
