--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -299,11 +299,11 @@ body {
   text-transform: uppercase;
 }
 
-.page__meta-sep::before {
-  content: "\2022";
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-}
+// .page__meta-sep::before {
+//   content: "\2022";
+//   padding-left: 0.5em;
+//   padding-right: 0.5em;
+// }
 
 /*
    Page taxonomy
